--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,9 @@
 x64/
 x86/
 bld/
-[Bb]in/
-[Oo]bj/
-[Ll]og/
+*[Bb]in/
+*[Oo]bj/
+*[Ll]og/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -328,3 +328,4 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+.gitattributes
