--- a/src/AopCaching.Core/AopCaching.Core.csproj
+++ b/src/AopCaching.Core/AopCaching.Core.csproj
@@ -8,6 +8,7 @@
     <Description>AopCaching - A aop cache library, that does not intrude on existing project code. Support memory and redis.</Description>
     <PackageTags>Cache,Caching,InMemory,Redis,AOP,Aspect,Autofac,DependencyInjection</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>Kakous</Authors>
   </PropertyGroup>
 
   <ItemGroup>
