--- a/src/AopCaching.InMemory.Autofac/AopCaching.InMemory.Autofac.csproj
+++ b/src/AopCaching.InMemory.Autofac/AopCaching.InMemory.Autofac.csproj
@@ -8,6 +8,7 @@
     <PackageProjectUrl>https://github.com/ww198643/AopCaching</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/ww198643/AopCaching/master/icon.png</PackageIconUrl>
     <PackageTags>Cache,Caching,InMemory,Redis,AOP,Aspect,Autofac,DependencyInjection</PackageTags>
+    <Authors>Kakous</Authors>
   </PropertyGroup>
 
   <ItemGroup>
