--- a/src/AopCaching.InMemory/AopCaching.InMemory.csproj
+++ b/src/AopCaching.InMemory/AopCaching.InMemory.csproj
@@ -8,6 +8,7 @@
     <PackageIconUrl>https://raw.githubusercontent.com/ww198643/AopCaching/master/icon.png</PackageIconUrl>
     <PackageTags>Cache,Caching,InMemory,Redis,AOP,Aspect,Autofac,DependencyInjection</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>Kakous</Authors>
   </PropertyGroup>
 
   <ItemGroup>
