--- a/src/AopCaching.Redis.DependencyInjection/AopCaching.Redis.DependencyInjection.csproj
+++ b/src/AopCaching.Redis.DependencyInjection/AopCaching.Redis.DependencyInjection.csproj
@@ -8,6 +8,7 @@
     <PackageIconUrl>https://raw.githubusercontent.com/ww198643/AopCaching/master/icon.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/ww198643/AopCaching</PackageProjectUrl>
     <Description>AopCaching - A aop cache library, that does not intrude on existing project code. Support memory and redis.</Description>
+    <Authors>Kakous</Authors>
   </PropertyGroup>
 
   <ItemGroup>
